Drag and Drop Functionality Implemented

--- a/src/components/DropPanel/DropPanel.scss
+++ b/src/components/DropPanel/DropPanel.scss
@@ -14,3 +14,15 @@
 .content {
     flex: 1;
 }
+
+.drop-panel {
+  display: flex;
+}
+
+.tile {
+  margin: 1rem 0.5rem;
+}
+
+.drag-heading {
+  margin-left: 1rem;
+}
