--- a/src/components/Alphabets/Alphabets.scss
+++ b/src/components/Alphabets/Alphabets.scss
@@ -49,4 +49,17 @@
       background: cornflowerblue;
     }
 }
-  
+
+.cross-icon {
+    background-color: white;
+    width: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: all 0.25s;
+}
+
+.cross-icon:hover {
+    cursor: pointer;
+    width: 1.25rem;
+}
