Integer box made editable

--- a/src/components/Submit/Submit.scss
+++ b/src/components/Submit/Submit.scss
@@ -12,3 +12,9 @@
     color: white;
     font-size: large;
 }
+
+.integer-input {
+    color: black !important;
+    width: -webkit-fill-available;
+    margin: 0.2rem;
+}
