Tabel and Error added

--- a/src/components/Submit/Submit.scss
+++ b/src/components/Submit/Submit.scss
@@ -18,3 +18,9 @@
     width: -webkit-fill-available;
     margin: 0.2rem;
 }
+
+.alert {
+    width: max-content !important;
+    margin-left: 7rem;
+    margin-bottom: 2rem !important;
+}
