--- a/src/components/Submit/Submit.scss
+++ b/src/components/Submit/Submit.scss
@@ -24,3 +24,8 @@
     margin-left: 7rem;
     margin-bottom: 2rem !important;
 }
+
+.loading-gif {
+    height: max-content;
+    width: min-content;
+}
